# render_raytracing

./: CMakeLists.txt  ReadMe.md
data/: duck.stl
lib/: geometry.h
src/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  light.cpp  light.h  main.cpp  materials.h  objects.cpp  objects.h  process_sdl.cpp  process_sdl.h  render.cpp  render.h  render_cl.cpp  render_cl.h  types.h
src/cl/: Objects.cl  kernel.cl  utils.cl
src/graphics/: MyForm.cpp  MyForm.h  ReadMe.txt  Source.cpp
